--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Darrell Freeman</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -57,10 +57,9 @@
     <section class="sidebar">
       <div id="connect">
         <h2>Connect with Me</h2>
-
-        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+          <a href="https://github.com/nclespaul"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+          <a href="https://www.linkedin.com/in/darrell-freeman-a2382311/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+          <a href="http://stackoverflow.com/users/7578224/nclespaul"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow"
       </div>
     </section>
   </div>
